--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,16 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- FONTAWESOME -->
+  <link rel="stylesheet" href="assets/style/fontawesome-5/css/all.min.css">
+  <!-- BOOTSTRAP -->
+  <link rel="stylesheet" href="assets/style/bootstrap/css/bootstrap.min.css">
+
 </head>
 <body>
   <app-root></app-root>
+
+  <script src="assets/style/bootstrap/js/jquery.min.js"></script>
+  <script src="assets/style/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
